--- a/06-data-wrangling.Rmd
+++ b/06-data-wrangling.Rmd
@@ -92,25 +92,18 @@ We strongly recommend using the second model, relational data tables, in almost 
 
 ## Relational data
 
-Again, please refer to [Relational Data](https://r4ds.had.co.nz/relational-data.html) in R for Data Science for a good example of what this can look like.
+Refer to [Relational Data](https://r4ds.had.co.nz/relational-data.html) in _R for Data Science_ for a good example of what a good relational database can look like.
 
 **Important**: For a set of relational tables to work, you must ensure that each table relates to another with a unique `Key`.  For example, a child-level dataset must also include IDs for household- or cluster to be merged to household or cluster level data.  
 
 Practical advice on `Key` variables / IDs used to link datasets. Numeric IDs can occasionally cause problems with merges due to machine rounding errors so character values can sometimes be a good alternative. Whatever format you use, ensure that they do not in some way encode identifying information (e.g., using a social security number or medical record number would be a poor choice of ID for a final dataset).
 
-## Reshaping data
-
-The `dplyr` package introduced the `pivot_wider` and `pivot_longer` functions in 2019. They make reshaping data dramatically easier than any previous functions, including `reshape()` (base R) or `gather`/`spread` (Tidyverse).  This excellent article includes details:
-
-https://tidyr.tidyverse.org/dev/articles/pivot.html
-
-## Data cleaning
-
-Data cleaning is typically an iterative process that you should conduct on a variable-by-variable basis. Occasionally it is useful to clean an entire questionnaire module at the same time since variables in the same module can be related to one another, and since it can help to proceed through the cleaning process in well-defined chunks. I find it helpful to have a copy of the survey questionnaire (if relevant) handy while cleaning specific variables. This enables you to check skip patterns and codes in the survey against the dataset. We don’t have a lot of general advice for data cleaning except the following. First, there is something to be said for “trolling” (in the fishing sense) through parts of the dataset to see what the data look like and to make sure you have a feel for how information is stored in different variables (e.g., are missing values coded or simply recored as “`.`” or `NA`). Second, it can be helpful to consolidate all data cleaning into a single program for each dataset. The data cleaning program corrects entry errors, labels variables, formats variables, and outputs either a temporary or final dataset (but does not, ever, overwrite the untouched data).
 
 ## Be careful with joins / merges
 
 Experience shows that merging datasets is one of the most error prone steps in data wrangling. Merges can be particularly tricky for less experienced programmers. Errors are likely early in the data processing work flow, and less likely when merging final datasets with clean key variables (IDs) and clear relationships between datasets. Carefully check each merge to ensure it is working as you expect.
+
+> **ESSENTIAL READING:** [Join Problems](https://r4ds.had.co.nz/relational-data.html#join-problems) in _R for Data Science_
 
 In the Stata software there is a really nice feature with `merge` that allows you to specify the type of merge/join and then examine the diagnostics of that merge. 
 
@@ -124,12 +117,15 @@ In our experience, the two most common types of joins in our work are mutating j
 
 Familiarize yourself with these types of operations. The [Relational data](https://r4ds.had.co.nz/relational-data.html) chapter of _R for Data Science_ includes details.
 
-These operations can be tricky if the datasets include different resolutions of data and it is not necessarily a 1:1 merge. Two tips:
+## Reshaping data
 
-  1. Always check the dimensions of your data.frames before and after a join to ensure the join is working as you expect.  
+The `dplyr` package introduced the `pivot_wider` and `pivot_longer` functions in 2019. They make reshaping data dramatically easier than any previous functions, including `reshape()` (base R) or `gather`/`spread` (Tidyverse).  This excellent article includes details:
 
-  2. If working in [RStudio](https://rstudio.com/) (recommended), always inpect the joined/merged data with `View()` to ensure that the joined data look as you expect.
+https://tidyr.tidyverse.org/dev/articles/pivot.html
 
-These are by no means fool-proof, but they can help diagnose problems with joins. 
+## Data cleaning
 
+Data cleaning is typically an iterative process that you should conduct on a variable-by-variable basis. Occasionally it is useful to clean an entire questionnaire module at the same time since variables in the same module can be related to one another, and since it can help to proceed through the cleaning process in well-defined chunks. I find it helpful to have a copy of the survey questionnaire (if relevant) handy while cleaning specific variables. This enables you to check skip patterns and codes in the survey against the dataset. 
+
+We don’t have a lot of general advice for data cleaning except the following. First, there is something to be said for “trolling” (in the fishing sense) or visually scrolling through parts of the dataset to see what the data look like and to make sure you have a feel for how information is stored in different variables (e.g., are missing values coded or simply recored as “`.`” or `NA`). Use the `View()` utility in `RStudio` to look at your data often during the cleaning process.  Second, it can be helpful to consolidate all data cleaning into a single program for each dataset. The data cleaning program corrects entry errors, labels variables, formats variables, and outputs either a temporary or final dataset (but does not, ever, overwrite the untouched data).  As noted in the [Workflows](#workflows) chapter, _key data processing should be done once, at the earliest possible place in the workflow_.
 
